deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disapyr
  namespace: disapyr
spec:
  selector:
    app: disapyr
  ports:
    - port: 80
      targetPort: 8080
